[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://saxmono.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.596078, 0.596078, 0.596078, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://saxmono.ttf"

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://saxmono.ttf"

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = SubResource( 8 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 832.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "Godot Steam Pong"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
margin_top = 128.0
margin_right = 832.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateLobby" type="Button" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -128.0
margin_right = 160.0
margin_bottom = -64.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "Create Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joinCreateLobby" type="Button" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -64.0
margin_right = 160.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "join Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 64.0
margin_right = 160.0
margin_bottom = 128.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobby" type="Control" parent="."]
visible = false
margin_top = 128.0
margin_right = 832.0
margin_bottom = 512.0

[node name="LobbyTitle" type="Label" parent="Lobby"]
margin_top = 32.0
margin_right = 832.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Label" parent="Lobby"]
margin_top = 96.0
margin_right = 832.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 9 )
text = "Player 1 : "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="Label" parent="Lobby"]
margin_top = 160.0
margin_right = 832.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 9 )
text = "Player 2 : "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveLobby" type="Button" parent="Lobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = 64.0
margin_right = -96.0
margin_bottom = 128.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "Leave Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="Lobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 96.0
margin_top = 64.0
margin_right = 352.0
margin_bottom = 128.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "Start Game"

[node name="LobbyList" type="Control" parent="."]
visible = false
margin_top = 128.0
margin_right = 832.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvailableLobbies" type="Label" parent="LobbyList"]
margin_top = -8.0
margin_right = 832.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 9 )
text = "--- Available Lobbies ---"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="LobbyList"]
margin_left = 64.0
margin_top = 64.0
margin_right = 768.0
margin_bottom = 256.0
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="LobbyList/Scroll"]
margin_right = 704.0
margin_bottom = 192.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/separation = 23
alignment = 1

[node name="Back" type="Button" parent="LobbyList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = 96.0
margin_right = -32.0
margin_bottom = 160.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Refresh" type="Button" parent="LobbyList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 96.0
margin_right = 288.0
margin_bottom = 160.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "Refresh"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Main/CreateLobby" to="." method="_on_CreateLobby_pressed"]
[connection signal="pressed" from="Main/joinCreateLobby" to="." method="_on_joinCreateLobby_pressed"]
[connection signal="pressed" from="Main/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Lobby/LeaveLobby" to="." method="_on_LeaveLobby_pressed"]
[connection signal="pressed" from="Lobby/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="LobbyList/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="LobbyList/Refresh" to="." method="_on_Refresh_pressed"]
